Bug 171061 - online IMAP and spamassassin filters don't work on incoming mails
Summary: online IMAP and spamassassin filters don't work on incoming mails
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: filtering (other bugs)
Version First Reported In: 1.10.1
Platform: Mandriva RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2008-09-14 17:55 UTC by Angelo Naselli
Modified: 2009-04-28 20:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Angelo Naselli 2008-09-14 17:55:52 UTC
Version:           1.10.1 (using KDE 4.1.1)
OS:                Linux
Installed from:    Mandriva RPMs

Open kmail, wait for mails download and all of them remain in inbox.
Online IMAP filters are almost not working, almost because, manual use (ctrl-J) works, and if mails fall into the same filter seems as  well (not always 
though). 
SPAM filters instead seem not to work at all.
Comment 1 Ruchir Brahmbhatt 2009-04-08 12:30:44 UTC
I tried filter on subject and from email and it appear to be applied properly and it moved the mail as per my filter configuration. Please let me know the exact steps you performed and filter criteria and action.
Comment 2 Angelo Naselli 2009-04-08 12:48:57 UTC
I'm using dimap at the moment. I could try to add a new user and try imap again as soon as possible if needed.
Comment 3 Ruchir Brahmbhatt 2009-04-08 12:55:32 UTC
@Angelo: Thanks for your prompt response. Please try and report back with exact steps to reproduce.
Comment 4 Thomas McGuire 2009-04-08 15:54:09 UTC
SVN commit 951033 by tmcguire:

Fix online IMAP filters not working in various situations.

Patch by Matthias Gehre <M.Gehre@gmx.de>, thanks very much!

BUG: 171061
BUG: 174430
BUG: 182208
BUG: 186264


 M  +15 -11    actionscheduler.cpp  
 M  +17 -5     actionscheduler.h  
 M  +4 -1      kmcommands.cpp  
 M  +22 -6     kmfilteraction.cpp  
 M  +1 -1      managesievescriptsdialog.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=951033
Comment 5 Angelo Naselli 2009-04-08 21:51:47 UTC
rpm -qa | grep kmail
kmail-4.2.2-2mdv2009.1
it seems to be affected i can't rebuild kmail by myself at the moment. I will point this bug to mandriva maintainers though.

Sorry,
Angelo
Comment 6 Angelo Naselli 2009-04-09 22:47:31 UTC
Could you provide also a patch for kde 4.2.2 or at least kde 4.2.x branch?
TIA
  Angelo
Comment 7 Thomas McGuire 2009-04-10 00:41:32 UTC
If there are no problems with it, I plan to backport it to the KDE 4.2 branch, which will become KDE 4.2.3.
Comment 8 Nicolas L. 2009-04-10 12:17:59 UTC
can you provide a patch against kde 4.2 ? that ay i will make it available for angelo on a mandriva rpm


thanks in advance

------
Nicolas Lécureuil
Mandriva KDE team ( Contributor )
Comment 9 Thomas McGuire 2009-04-10 12:24:40 UTC
You can get a patch with 
 svn diff svn://anonsvn.kde.org/home/kde/trunk/KDE/kdepim/kmail -r951032:951033

It should also apply to KDE 4.2.2 cleanly. If not, tell me.
Please do not add it to your offical packages yet, I want to have it tested in trunk before it is released a bit.
Comment 10 Nicolas L. 2009-04-10 12:45:10 UTC
thanks i will test

Do not worry i don't plan to do this official, i will just provide rpms to angelo so he will be able to give you some feedbacks :)
Comment 11 Nicolas L. 2009-04-10 19:46:29 UTC
thomas this can't apply that easily, more backports are needed like commit http://websvn.kde.org/?view=rev&revision=924813
Comment 12 Nicolas L. 2009-04-10 20:14:02 UTC
in fact it would need to backport too :

http://websvn.kde.org/?view=rev&revision=924813
and
http://websvn.kde.org/?view=rev&revision=947267
Comment 13 Nicolas L. 2009-04-10 21:57:47 UTC
i provided rpms to angelo i hope he will be able to provide feedbacks soon
Comment 14 Angelo Naselli 2009-04-14 12:03:39 UTC
I've tried Nicolas' backport, but with no luck, it seems not to close at least for me. I had a crash also, but i'm not
sure if after i wrote a new filter as soon as it has been used on incoming mail.
I can't do any tests today, since i'm at office... if you need any info i could make tests at home.
As soon as Mandriva 2009.1 is out i could try to build kontact from svn, but not now cause hard-disk space...
Comment 15 Thomas McGuire 2009-04-16 18:34:36 UTC
Angelo, can you provide us a backtrace of the crash? Please see http://techbase.kde.org/Development/Tutorials/Debugging/How_to_create_useful_crash_reports.

Please also tell exactly how filtering did not work, and the exact steps to reproduce the problem. Thanks.
Comment 16 Thomas McGuire 2009-04-28 20:15:08 UTC
SVN commit 960606 by tmcguire:

Backport r951033 by tmcguire from trunk to the 4.2 branch:

Fix online IMAP filters not working in various situations.

Patch by Matthias Gehre <M.Gehre@gmx.de>, thanks very much!

CCBUG: 171061
CCBUG: 174430
CCBUG: 182208
CCBUG: 186264



 M  +15 -11    actionscheduler.cpp  
 M  +17 -5     actionscheduler.h  
 M  +4 -1      kmcommands.cpp  
 M  +22 -6     kmfilteraction.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=960606